<resources>
    <string name="app_name">MyDiary</string>

    <string name="splash_text">My Diary</string>
    <string name="splash_logo_contentDescription">Uygulamanın Logosu</string>

    <string name="username_or_email">E-mail</string>
    <string name="enter_password">Şifre</string>
    <string name="forgot_password">Şifrenizi mi unuttunuz?</string>
    <string name="login_whale_contentDescription">Balina Kuyruğu </string>
    <string name="enter">Giriş</string>
    <string name="back">Geri</string>
    <string name="add">Ekle</string>
    <string name="login_options_whale_contentDescription">Balina</string>
    <string name="login">Giriş Yap</string>
    <string name="sign_up">Üye Ol</string>
    <string name="continue_without_login">Giriş Yapmadan Devam Et</string>

    <string name="avatar_image_contentDescription">Avatar Resmi</string>
    <string name="e_mail">E-Mail</string>
    <string name="name_surname">Ad Soyad</string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="repeat_password">Şifre Tekrarı</string>
    <string name="have_an_account">Zaten bir hesabınız mı var?</string>

    <string name="login_fragment_email_warning">Lütfen geçerli bir email adresi giriniz</string>
    <string name="login_fragment_password_warning">Lütfen şifre giriniz.</string>
    <string name="signup_fragment_email_warning">Lütfen geçerli bir email adresi giriniz.</string>
    <string name="signup_fragment_password_warning">Şifreniz minimum 6 karakter olmalı, en az 1 adet harf ve en az 1 adet rakam bulundurmalıdır.</string>
    <string name="signup_fragment_repeat_warning">Şifreler uyuşmuyor.</string>
    <string name="login_fragment_onfailure_warning">E-mail ya da şifre hatalı.</string>

    <string name="number_of_diary">Günlük Sayım</string>
    <string name="my_moods">Ruh hallerim</string>

    <string name="mood_veryhappy_contentDescription">Çok mutlu hissediyor</string>
    <string name="mood_happy_contentDescription">Mutlu hissediyor</string>
    <string name="mood_angry_contentDescription">Sinirli hissediyor</string>
    <string name="mood_cool_contentDescription">Havalı hissediyor</string>
    <string name="mood_cry_contentDescription">Ağlamaklı hissediyor</string>
    <string name="mood_expressionless_contentDescription">İfadesiz hissediyor</string>
    <string name="mood_sad_contentDescription">Üzgün hissediyor</string>
    <string name="my_diaries">Günlüklerim</string>
    <string name="date_text_text">08.01.2023</string>
    <string name="delete_button_contentDescription">Günlüğü sil</string>
    <string name="export">Dışa Aktar</string>
    <string name="import_import">İçe Aktar</string>
    <string name="donate">Bağış Yap</string>
    <string name="rate_us">Bizi Değerlendirin</string>
    <string name="share_app">Uygulamayı Paylaş</string>
    <string name="privacy_policy">Gizlilik Politikası</string>
    <string name="logout">Çıkış Yap</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="feel">Ne hissediyorsunuz?</string>
    <string name="how_are_you_today">Bugün Nasılsın?</string>
    <string name="date">Tarih</string>
    <string name="date_example">01/01/2023</string>
    <string name="title">Başlık</string>

    <string name="today">Bugün</string>
    <string name="change_password">Şifreni Değiştir</string>
    <string name="email_example">email.email@md.com</string>
    <string name="my_photos">Fotoğraflarım</string>
    <string name="my_locations">Konumlarım</string>
    <string name="change_theme">Temayı Değiştir</string>

    <string name="add_photo_contentDescription">Fotoğraf ekleyin</string>
    <string name="go_to_diary">Günlüğe Git</string>
    <string name="close_photo_contentDescription">Fotoğrafı kapatın</string>
    <string name="delete_photo_contentDescription">Fotoğrafı silin</string>
    <string name="selected_photo_contentDescription">Seçilen fotoğraf</string>

    <string name="logout_popup_message">Çıkış yapmak istediğinizden emin misiniz?</string>
    <string name="cancel">Vazgeç</string>

    <string name="permission_needed_for_gallery">Galeri için izin gerekiyor.</string>
    <string name="give_permission">İzin ver</string>
    <string name="save">Kaydet</string>

    <string name="warning">Uyarı!</string>
    <string name="select_emoji">Lütfen bir ruh hali seçin.</string>
    <string name="write_diary">Lütfen bir günlük yazın.</string>
    <string name="write_title">Lütfen bir başlık yazın.</string>
    <string name="ok">Tamam</string>
    <string name="diary_successful">Günlük başarıyla kaydedildi.</string>
    <string name="try_again">Bir hata oluştu. Lütfen tekrar deneyin.</string>
    <string name="delete">Sil</string>
    <string name="delete_diary_message">Günlüğü silmek içindeki verilerin tümünün silinmesi demektir. Geri getirilemez. Silmek istediğinize emin misiniz?</string>
    <string name="the_photo_you_added">Eklediğiniz fotoğraf</string>
    <string name="the_emoji_you_added">Eklediğiniz emoji</string>
    <string name="current_password">Mevcut şifre</string>
    <string name="new_password">Yeni şifre</string>
    <string name="new_password_repeat">Yeni şifre tekrarı</string>
    <string name="your_password_has_been_changed">Şifreniz değiştirildi</string>
    <string name="authentication_failed">Kimlik doğrulama başarısız oldu. Şifrenizi kontrol ederek tekrar deneyin.</string>
    <string name="delete_photo_message">Fotoğrafı silmek günlüğü silmeyecektir. Günlüğü silmek fotoğrafın da silinmesine neden olur. Lütfen yapmak istediğiniz işlemi seçin.</string>
    <string name="delete_photo">Fotoğrafı sil</string>
    <string name="delete_photo_success">Fotoğraf başarıyla silindi</string>
    <string name="delete_diary_success">Günlük başarıyla silindi</string>
    <string name="show_diary">Günlükleri göster</string>
    <string name="add_diary">Günlük ekle</string>
    <string name="show_diary_warning">Henüz bugüne ait bir günlük eklememişsiniz.</string>
    <string name="diary_content_example">Sevgili günlük, bugün çok yoğun geçti.</string>
    <string name="diary_delete_success">Günlük başarıyla silindi.</string>

</resources>