<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".view.PhotoDetailFragment">


    <ImageView
        android:id="@+id/selected_photo"
        android:layout_width="330dp"
        android:layout_height="276dp"
        android:layout_marginTop="100dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/selected_photo_contentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/main_button"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/delete_photo_contentDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_photo"
        app:srcCompat="@drawable/icon_delete" />

    <Button
        android:id="@+id/go_to_diary"
        android:background="@drawable/main_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:text="@string/go_to_diary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_photo" />

    <ImageButton
        android:id="@+id/close"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@color/transparent"
        android:contentDescription="@string/close_photo_contentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_close" />

</androidx.constraintlayout.widget.ConstraintLayout>
