<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ProfileFragment">

    <ImageView
        android:id="@+id/profile_ellipse"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_ellipse"
        android:layout_below="@+id/select_avatar"
        android:contentDescription="@null" />

    <ImageButton
        android:id="@+id/select_avatar"
        android:background="@color/transparent"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/woman_1"
        android:contentDescription="@string/avatar_image_contentDescription" />


    <TextView
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_example"
        android:fontFamily="@font/roboto_medium"
        android:textSize="15sp"
        android:textColor="@color/main_color"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_ellipse"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/change_password"
        style="@style/profileTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_address"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/my_photos"
        style="@style/profileTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_photos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_password"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>